# massive-boids-stream

./: .gitignore  CONVERSATION.md  Dockerfile  PROMPT.md  README.md  docker-compose.yml  nginx.conf
backend/: Cargo.toml
backend/src/: main.rs
doc/: architecture.md
src/: index.html  narration-script.json  summary.html
