[package]
name = "boids-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "=4.5.1"
actix-rt = "=2.9.0"
actix-files = "=0.6.5"
tokio = { version = "=1.36.0", features = ["full", "sync"] }
tokio-stream = { version = "=0.1.14", features = ["sync"] }
rayon = "1.8"
image = "0.24"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
env_logger = "0.10"
log = "0.4"
futures = "0.3"

[profile.release]
opt-level = 3
lto = true
